--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.GWTalentTrade"
         tools:targetApi="31" >
         <activity
+            android:name=".Listings"
+            android:exported="false"
+            android:label=""
+            android:theme="@style/Theme.GWTalentTrade.NoActionBar" />
+        <activity
             android:name=".createPost"
             android:exported="false" />
         <activity
@@ -22,11 +27,11 @@
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
-            android:exported="false">
+            android:exported="false" >
         </activity>
         <activity
             android:name=".firstPage"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,8 +40,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
+            android:exported="true" >
         </activity>
     </application>
 
