--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.GWTalentTrade"
         tools:targetApi="31">
         <activity
+            android:name=".ManageRequests"
+            android:exported="false" />
+        <activity
             android:name=".Profile"
             android:exported="false" />
         <activity
@@ -30,7 +33,7 @@
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".firstPage"
             android:exported="true">
@@ -42,7 +45,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
